feat(progress): update

--- a/notebooks/02_pivot_first_paragraph/21_summary_vs_adjectives.ipynb
+++ b/notebooks/02_pivot_first_paragraph/21_summary_vs_adjectives.ipynb
@@ -2328,10 +2328,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# ✖ FAIL!\n",
+    "\"the rest\" part is oftentimes too long to be processed without pushing the original prompt instruction out of the context window. Locally run model has problems with sticking to the instruction of providing only the adjectives; online models like `o1` don't even allow pasting such long texts into the input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
